css fix for linebreak on adresses

--- a/src/CSS/pages/_eventpage.scss
+++ b/src/CSS/pages/_eventpage.scss
@@ -6,6 +6,9 @@
   grid-template-columns: 1fr;
   gap: 50px;
 
+  .adress{
+    white-space: pre-line;
+  }
 }
 
 .event-sidebar {
